fix visibility of edit button on unit page, fix sorting on rent column, include title column

--- a/src/static/containers/Padded/style.scss
+++ b/src/static/containers/Padded/style.scss
@@ -1,3 +1,3 @@
 #padded-container {
-    margin-top: 25px;
+    margin-top: 36px;
 }
